--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ a{
 }
 /*main code*/
 html{
-    font-family: VT323,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'VT323', monospace;
     font-size: 10px;
 
     -webkit-touch-callout: none;
