--- a/style.css
+++ b/style.css
@@ -181,240 +181,214 @@ header > nav > a{
 /* MAIN */
 main{
     width: 100%;
-    min-width: 350px;
     z-index: 1;
 }
-/* start page */
-#start-page{
-    width: 100%;
-    background-image: url(background2-min.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 60vw;
-    /* przeliczanie */
-}
-#logo{
-    width: 100%;
-}
-@media only screen and (min-width:700px){
-    #logo{
-        margin-top: -100px;
-    }
-}
-/* book a table */
-.text{
-    font-size: 1.8rem;
-}
-#book-a-table{
-    color: white;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 100px;
-    width: 280px;
-    height: 10%;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.219);
-}
-h2{
-    font-size: 2rem;
-    letter-spacing: 0.2rem;
-    text-align: center;
-}
-#parameters{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-}
-.select{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-    padding: 1rem;
-}
-.icon{
-    font-size: 2rem;
-}
-.select > span{
-    width: 100%;
-}
-.select > input{
-    width: 80%;
-    height: 20px;
-    display: none;
-    font-size: 1.4rem;
-}
-.select:hover > input{
-    display: inherit;
-}
-article > input{
-    display: none;
-}
-.border{
-    padding: 0.5rem;
-    background-color: rgba(0, 0, 0, 0.377);
-    border-radius: 2rem;
-    color: white;
-}
-#button-label{
-    transition: 1s ease;
-    cursor: pointer;
-}
-#button-label:hover{
-    background-color: #E79115;
-}
-@media only screen and (min-width:700px){
-    #book-a-table{
-        top: 200px;
-        right: 20px;
-        width: 50%;
-        left: unset;
-        transform: unset;
-    }
-    #parameters{
-        justify-content: space-around;
-    }
-    .text{
-        font-size: 2.4rem;
-    }
-}
-/* menu */
-#menu-img{
-    width: 100%;
-    position: relative;
-}
-#menu-img > img{
-    width: 100%;
-}
-@media only screen and (min-width:580px){
-    #menu-img > img{
-        height: unset;
-        width: 100%;
-    }
-}
-/* our story */
-#our-story{
-    height: fit-content;
-    position: relative;
-    background-blend-mode: multiply;
-    background: rgba(0, 0, 0, 0.4) url(hand-hd-min.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-}
-.separator1{
-    width: 100%;
-    position: absolute;
-    top: 0;
-}
-.separator2{
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-}
-#our-story-image{
-    width: 100%;
-}
-.content-on-black-bgc{
-    width: 80%;
-    height: 30%;
-    display: flex;
-    justify-content:space-evenly;
-    flex-direction: column;
-    color: white;
-    text-align: center;
-    margin-bottom: 30rem;
-}
-.content-on-black-bgc > h2{
-    color: white;
-    font-size: 3.2rem;
-    margin: 10vw 0;
-    /* przeliczanie */
-}
-/* news & events */
-#news-events{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#news-events > h2{
-    margin: 10vw 0;
-    text-align: center;
-}
-.event{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-style: 1.6rem;
-}
-h3{
-    font-size: 3rem;
-    padding-bottom: 2rem;
-}
-.ne-image{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-.ne-image > img{
-    width: 60%;
-}
-.content{
-    width: 60%;
-    text-align: center;
-    padding: 2rem 0;
-}
-/* contact */
-#contact-us{
-    background-blend-mode: multiply;
-    background: rgba(0, 0, 0, 0.4) url(pizzeria-outdoor.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: bottom;
-    height: 150vw;
-    background-position: center;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-}
-#contact-us > article{
-    color: white;
-    height: 100%;
-    display: flex;
-    justify-content:flex-start;
-    flex-direction: column;
-    align-items: center;
-}
-#contact-us > article > div{
-    padding: 2rem 0;
-}
-#address{
-    margin-top: 7rem;
-}
-figcaption{
-    display: flex;
-    flex-direction: column;
-    color: white;
-    width: 90%;
-    background-color: black;
-}
+    /* start page */
+        .start-page{
+            width: 100%;
+            max-width: 1920px;
+            margin: 0 auto;
+            display: block;
+        }
+            /* book a table */
+            #start-background{
+                height: 50vw;
+                background-image: url(background2-min.png);
+                background-size: contain;
+                background-repeat: no-repeat;
+                display: flex;
+                flex-direction: column;
+                justify-content:flex-start;
+                align-items: center;
+                text-align: center;
+            }
+                #book-a-table{
+                    color: white;
+                    width: 70%;
+                    height: 150px;
+                    margin-top: 50px;
+                    display: flex;
+                    justify-content:space-around;
+                    align-items: center;
+                    flex-direction: column;
+                }
+                    #button{
+                        display: none;
+                    }
+                    #book-a-table > label{
+                        cursor: pointer;
+                        background-color: rgba(0, 0, 0, 0.356);
+                        border-radius: 20px;
+                        height: fit-content;
+                        width: fit-content;
+                        padding: 0.3rem;
+                    }
+                        .h2-text{
+                            font-size: 3.2rem;
+                            letter-spacing: 0.2rem;
+                        }
+                    #parameters{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                    }
+                        .select{
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            margin: 0 10px;
+                            background-color: rgba(0, 0, 0, 0.356);
+                        }
+                            .icon{
+                                font-size: 25px;
+                            }
+                            .text{
+                                font-size: 2rem;
+                            }
+                            .select > input{
+                                width: 70px;
+                                height: 20px;
+                                border: 2px solid rgba(0, 0, 0, 0.356);
+                                padding: 1px;
+                            }
+            @media screen and (min-width: 700px) {
+                #start-background{
+                    align-items: flex-end;
+                }
+                #book-a-table{
+                    margin-top: 150px;
+                }
+            }
+    /* start page end */
+
+    /* menu */
+        #menu-img{
+            width: 100%;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+            #menu-img > img{
+                width: 100%;
+                max-width: 1920px;
+            }
+    /* menu end */
+
+    /* our story */
+            /* .start page in 186 line */
+                #our-story{
+                    position: relative;
+                    background-blend-mode: multiply;
+                    background-attachment: fixed;
+                    height: calc(100vw - 20%);
+                    background:rgba(0, 0, 0, 0.4) url(hand-hd-min.png);
+                    background-position: center;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content:flex-start;
+                    align-items: center;
+                    text-align: center;
+                }
+                    .separator1{
+                        width: 100%;
+                        position: absolute;
+                        top: 0;
+                    }
+                    .separator2{
+                        width: 100%;
+                        position: absolute;
+                        bottom: 0;
+                    }
+                    #our-story > article{
+                        margin-top: 50px;
+                    }
+                    .content-on-black-bgc{
+                        width: 80%;
+                        height: 30%;
+                        display: flex;
+                        justify-content:space-evenly;
+                        flex-direction: column;
+                        color: white;
+                        text-align: center;
+                        margin-bottom: 30rem;
+                    }
+                    .content-on-black-bgc > h2{
+                        color: white;
+                        font-size: 3.2rem;
+                        margin: 10vw 0;
+                    }
+    /* our story end */
+                    
+    /* news & events */
+        #news-events{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+            #news-events > h2{
+                margin: 50px 0 20px 0;
+            }
+            .event{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                font-style: 1.6rem;
+            }
+                h3{
+                    font-size: 2rem;
+                    padding-bottom: 2rem;
+                }
+                .event > img{
+                    width: 30%;
+                }
+                .content{
+                    width: 60%;
+                    text-align: center;
+                    padding: 2rem 0;
+                }
+    /* news & events end*/
+
+    /* contact */
+        #contact-us{
+            background-blend-mode: multiply;
+            background: rgba(0, 0, 0, 0.4) url(pizzeria-outdoor.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: bottom;
+            height: fit-content;
+            min-height: 500px;
+            background-position: center;
+            position: relative;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
+        }
+        #contact-us > h2{
+            margin-top: 70px;
+            color: white;
+        }
+        #contact-us > article{
+            color: white;
+            text-align: center;
+        }
+        #contact-us > article > div{
+            padding: 2rem 0;
+        }
+        #address{
+            margin-top: 5rem;
+        }
+        figcaption{
+            word-wrap: wrap;
+            color: white;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.479);
+        }
+    /* contact end*/
+/* main end */
