--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ main{
         }
             /* book a table */
             #start-background{
-                height: 55vw;
+                height: 90vw;
                 background-image: url(background2-min.png);
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -207,7 +207,7 @@ main{
                     color: white;
                     width: 70%;
                     height: 150px;
-                    margin-top: 50px;
+                    margin-top: 40vw;
                     display: flex;
                     justify-content:space-around;
                     align-items: center;
@@ -218,12 +218,25 @@ main{
                     }
                     #book-a-table > label{
                         cursor: pointer;
-                        background-color: rgba(0, 0, 0, 0.356);
+                        background-color: rgba(231, 145, 21, 0.64);
                         border-radius: 20px;
                         height: fit-content;
                         width: fit-content;
                         padding: 0.5rem;
                         margin: 10px 0;
+
+                        animation-name: color-change;
+                        animation-duration: 1s;
+                        animation-iteration-count: infinite;
+                        animation-timing-function: ease-out;
+                    }
+                    @keyframes color-change{
+                        0% {
+                          color: black;
+                        }
+                        100% {
+                          color: white;
+                        }
                     }
                         .h2-text{
                             font-size: 3rem;
@@ -240,7 +253,9 @@ main{
                             justify-content: center;
                             align-items: center;
                             margin: 0 10px;
-                            background-color: rgba(0, 0, 0, 0.356);
+                            background-color: rgba(231, 145, 21, 0.64);
+                            padding: 0.5rem;
+                            border-radius: 10px;
                         }
                             .icon{
                                 font-size: 25px;
@@ -251,12 +266,13 @@ main{
                             .select > input{
                                 width: 70px;
                                 height: 20px;
-                                border: 2px solid rgba(0, 0, 0, 0.356);
+                                border: 2px solid rgba(231, 145, 21, 0.64);
                                 padding: 1px;
                             }
             @media screen and (min-width: 700px) {
                 #start-background{
                     align-items: flex-end;
+                    height: 55vw;
                 }
                 #book-a-table{
                     margin-top: 150px;
